samples/_failures_safe/1761094708_6949af_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_6b381bef.c: In function ‘main’:
./samples/SAFE/__tmp_6b381bef.c:149:9: error: expected declaration or statement at end of input
  149 |         fprintf(stderr, "Error reading input\n");
      |         ^~~~~~~
./samples/SAFE/__tmp_6b381bef.c:149:9: error: expected declaration or statement at end of input
